# rayemb

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: connectome.json  demo.html  index.html
docs/assets/: index-BO2nIwIy.css  index-BxyOHk5e.js  index-CMBM1v7h.js
docs/demo/: index.html
libs/diffdrr/diffdrr/: detector.py  drr.py  metrics.py  visualization.py
notebooks/: 01_inference.ipynb
rayemb/: cli.py  constants.py
rayemb/commands/: download.py  evaluate.py  generate.py  sample.py  train.py
rayemb/dataset/: __init__.py  calibration.py  ctpelvic1k_synthetic.py  custom.py  deepfluoro.py  deepfluoro_real.py  deepfluoro_synthetic.py
rayemb/models/: __init__.py  dinov2.py  fixed_landmark.py  rayemb.py  rayemb_inference.py  resnet.py  timm.py  unet.py
rayemb/registration/: __init__.py  runner.py  sampler.py
rayemb/utils/: __init__.py  data.py  evaluator.py  heatmaps.py  logging.py  loss.py  misc.py  sampling.py  similarity.py
scripts/: teaser.py
scripts/download/: deepfluoro.sh
scripts/evaluate/: rayemb_ctpelvic1k.sh  rayemb_deepfluoro.sh
scripts/generate/: dataset_ctpelvic1k.sh  dataset_deepfluoro.sh  downsize_nifti.py  template_ctpelvic1k.sh  template_deepfluoro.sh
scripts/misc/: concat_gif.sh
scripts/train/: rayemb_ctpelvic1k.sh  rayemb_custom.sh  rayemb_deepfluoro.sh
server/: constants.py  main.py
ui/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
ui/src/: App.tsx  driver.ts  index.css  main.tsx
ui/src/components/: Heatmap.tsx  ImageViewer.tsx  ThreeDViewer.tsx  Viewer.tsx  useViewer.ts
ui/src/hooks/: useImageViewer.ts  useViewer.ts
